Fix bugs on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -57,6 +57,7 @@ html {
   display: inline-block;
   border: none;
   appearance: none;
+  -webkit-appearance: none;
 }
 .btn:hover {
   background-color: #ccc;
